attempts at fixing message not showing at end, known bug currently saving progress

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ body {
 }
 
 /*hover effect on answer buttons on pointer devices */
-/* @media (hover: hover) and (pointer: fine) */ 
+/* @media (hover: hover) and (pointer: fine) */ /*Check this later and reimplement with {}*/ 
 .answer:hover {
     background-color: blueviolet; /*Remember to change */
     }
@@ -181,3 +181,9 @@ button:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+#results-message {
+    display: block;
+    margin-top: 10px;
+    color: black;
+    font-size: 1em;
+}
